--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,57 @@
 spring.application.name=aimian
+
+# 服务器配置
+server.port=8080
+
+# 数据库配置
+spring.datasource.url=jdbc:mysql://localhost:3306/aimian?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=root
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# MyBatis-Plus配置
+mybatis-plus.mapper-locations=classpath*:/mapper/**/*.xml
+mybatis-plus.type-aliases-package=org.itjuerui.domain
+mybatis-plus.configuration.map-underscore-to-camel-case=true
+mybatis-plus.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
+
+# Redis配置
+spring.data.redis.host=localhost
+spring.data.redis.port=6379
+spring.data.redis.password=
+spring.data.redis.database=0
+spring.data.redis.timeout=3000ms
+spring.data.redis.lettuce.pool.max-active=8
+spring.data.redis.lettuce.pool.max-idle=8
+spring.data.redis.lettuce.pool.min-idle=0
+
+# LLM配置
+# 支持两种配置方式：
+# 1. 通用配置（适用于所有 provider）
+# llm.provider=qwen
+# llm.apiKey=your-api-key
+# llm.baseUrl=https://api.example.com
+# llm.model=model-name
+# 2. Provider 特定配置（优先级更高）
+llm.provider=qwen
+llm.qwen.apiKey=your-qwen-api-key
+llm.qwen.baseUrl=https://dashscope.aliyuncs.com/compatible-mode/v1
+llm.qwen.model=qwen-turbo
+llm.deepseek.apiKey=your-deepseek-api-key
+llm.deepseek.baseUrl=https://api.deepseek.com
+llm.deepseek.model=deepseek-chat
+
+# MinIO配置（对象存储）
+minio.endpoint=http://localhost:9000
+minio.access-key=minioadmin
+minio.secret-key=minioadmin
+minio.bucket-name=aimian
+
+# 文件上传配置
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+# 日志配置
+logging.level.org.itjuerui=DEBUG
+logging.level.org.springframework.web=INFO
+logging.pattern.console=%d{yyyy-MM-dd HH:mm:ss} [%thread] %-5level %logger{50} - %msg%n
