Add optional AI-enhanced interview reports

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -60,6 +60,9 @@ llm.deepseek.apiKey=sk-6d587b5ed77442fcb25503b38d64c2a8
 llm.deepseek.baseUrl=https://api.deepseek.com
 llm.deepseek.model=deepseek-chat
 
+# Report AI 配置
+report.ai.enabled=false
+
 # ========== MinIO配置（可选）==========
 # minio.endpoint=http://localhost:9000
 # minio.access-key=minioadmin
