--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,6 +41,9 @@ llm.deepseek.apiKey=your-deepseek-api-key
 llm.deepseek.baseUrl=https://api.deepseek.com
 llm.deepseek.model=deepseek-chat
 
+# Report AI 配置
+report.ai.enabled=false
+
 # MinIO配置（对象存储）
 minio.endpoint=http://localhost:9000
 minio.access-key=minioadmin
